# databricks-connect

./: README.md
spaceflights-demo/: .gitignore  README.md  bundle_config_schema.json  databricks.yml  pyproject.toml  requirements.txt  run cli.py  run.py  session_store.db
spaceflights-demo/.viz/: stats.json
spaceflights-demo/conf/: logging.yml
spaceflights-demo/conf/base/: catalog.yml
spaceflights-demo/conf/databricks/: catalog.yml  mlflow.yml
spaceflights-demo/docs/source/: conf.py  index.rst
spaceflights-demo/src/spaceflights_demo/: __init__.py  __main__.py  hooks.py  settings.py
spaceflights-demo/tests/: test_run.py
spaceflights-demo/tests/pipelines/data_science/: test_pipeline.py
